Detect wheel zoom via WheelPrefs instead of the Ctrl modifier. (bug 1127700, r=smaug)